Fix contact form alignment

--- a/source/stylesheets/sections/home/_contact.scss
+++ b/source/stylesheets/sections/home/_contact.scss
@@ -4,6 +4,7 @@
   .s-HomeContact__Form {
     width: 100%;
     max-width: 600px;
+    margin: auto;
   }
 
   input,
